News page working fine but no algo to show news by pref it just shows all the preffered news one by one also loader works on 2.5s not fetch plus minor bugs like text not visible on white bg works fine for the time being

--- a/styles/news.css
+++ b/styles/news.css
@@ -15,6 +15,21 @@
 body {
   background-color: #000000;
 }
+/* loader */
+.loading{
+  position: fixed;
+  top: 30vh;
+  left: 30vw;
+  z-index: 78;
+  filter: invert(100);
+}
+.loaderStop{
+  visibility: hidden;
+  z-index: -78;
+}
+.loaderWorking{
+  visibility: hidden;
+}
 /* Left Name Part */
 .pageName {
   position: fixed;
@@ -91,7 +106,6 @@ body {
 }
 .itemText {
   position: absolute;
-  color: white;
   left: 1rem;
   bottom: 1rem;
   font-family: var(--titleFont);
